2011-12-29  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/NewConcurrentMessageDispatcher.cpp: Move creation of mqs to ctor.

	* testsuite/testMessageDispatcher.cpp: New file.

	* testsuite/Makefile.am: add testMessageDispatcher.

	* src/mcs/Makefile.am: Add ForwardMessage.cpp.
	* incle/mcs/Makefile.am: Add NewMessage.h and ForwardMessage.h.

	* include/network/NewConcurrentMessageDispatcher.tcc: Return value.

	* include/network/ConcurrentMessageQueue.h: New typedef for 2-dimensional
	vector of ConcurrentMessageQueue.

	* include/mcs/ForwardMessage.h: New file.
	* src/mcs/ForwardMessage.cpp: Likewise.
	* include/mcs/NewMessage.h: Likewise.

	* include/network/NewConcurrentMessageDispatcher.h: ctor with k and np_neighbors.

2011-12-28  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/Makefile.am: Add NewConcurrentMessageDispatcher.h.
	* src/network/Makefile.am: Add NewConcurrentMessageDispatcher.cpp.

	* include/network/NewConcurrentMessageDispatcher.h: New file.
	* include/network/NewConcurrentMessageDispatcher.tcc: Likewise.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.

2011-12-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBeliefState.cpp: Adapt testcase using BeliefStateOffset.

	* src/mcs/BeliefStateOffset.cpp: Fixed some small bugs.

	* include/mcs/Makefile.am: Add BeliefStateOffset.h.
	* src/mcs/Makefile.am: Add BeliefStateOffset.cpp to libmcs.

2011-12-25  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/BeliefStateOffset.h: New file.
	* src/mcs/BeliefStateOffset.cpp: Likewise.

	* testsuite/testBeliefState.cpp: Add testcase for belief combination.

	* src/mcs/NewBeliefState.cpp: Add combination of 2 NewBeliefStates.
	* include/mcs/NewBeliefState.h: Likewise.

2011-12-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testBridgeRuleEvaluation.cpp.
	* src/mcs/Makefile.am: Add BridgeRuleEvaluator.cpp.
	* include/mcs/Makefile.am: Add BridgeRuleEvaluator.h.
